--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,12 @@
 *.tar.gz
 *.rar
 
+.idea
+*.iml
+out
+target
+dist
+logs
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
