--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.datasource.password=123456
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter: error
 # 解决controller中方法名重复控制台打印警告
 logging.level.springfox.documentation.spring.web.readers.operation.CachingOperationNameGenerator: warn
+
+elasticsearch.nodes: 192.168.52.111:9200
+elasticsearch.protocol: http
+elasticsearch.username: elastic
+elasticsearch.password: hao@123
