--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=SpringBootDemo
 #指定Mybatis的Mapper文件
 mybatis.mapper-locations=classpath:mappers/*xml
 #指定Mybatis的实体目录
-mybatis.type-aliases-package=com.hao.springbootdemo.entity
+mybatis.type-aliases-package=com.hao.entity
 # 应用服务 WEB 访问端口
 server.port=8080
 server.servlet.context-path=/demo
