--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,34 @@
-# 应用名称
-spring.application.name=SpringBootDemo
-#下面这些内容是为了让MyBatis映射
-#指定Mybatis的Mapper文件
-mybatis.mapper-locations=classpath:mappers/*xml
-#指定Mybatis的实体目录
-mybatis.type-aliases-package=com.hao.entity
-# 应用服务 WEB 访问端口
-server.port=8080
-server.servlet.context-path=/demo
-spring.main.allow-bean-definition-overriding=true
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url: jdbc:mysql://localhost:3306/test-xl?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=123456
-# 解决swagger刷新时转换异常警告
-logging.level.io.swagger.models.parameters.AbstractSerializableParameter: error
-# 解决controller中方法名重复控制台打印警告
-logging.level.springfox.documentation.spring.web.readers.operation.CachingOperationNameGenerator: warn
+# 全部注释 改用 .yml格式
 
-elasticsearch.nodes: 192.168.52.111:9200
-elasticsearch.protocol: http
-elasticsearch.username: elastic
-elasticsearch.password: hao@123
+## 应用名称
+#spring.application.name=SpringBootDemo
+##下面这些内容是为了让MyBatis映射
+##指定Mybatis的Mapper文件
+#mybatis.mapper-locations=classpath:mappers/*xml
+##指定Mybatis的实体目录
+#mybatis.type-aliases-package=com.hao.entity
+## 执行数据库sql打印 下面三行 使用任意一个
+#logging.level.com.hao.**=debug
+##mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+##mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.slf4j.Slf4jImpl
+#
+## 应用服务 WEB 访问端口
+#server.port=8080
+#server.servlet.context-path=/demo
+#spring.main.allow-bean-definition-overriding=true
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+##spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+#spring.datasource.url: jdbc:p6spy:mysql://localhost:3306/test-xl?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#
+## 解决swagger刷新时转换异常警告
+#logging.level.io.swagger.models.parameters.AbstractSerializableParameter: error
+## 解决controller中方法名重复控制台打印警告
+#logging.level.springfox.documentation.spring.web.readers.operation.CachingOperationNameGenerator: warn
+#
+#elasticsearch.nodes: 192.168.52.111:9200
+#elasticsearch.protocol: http
+#elasticsearch.username: elastic
+#elasticsearch.password: hao@123
