fix：提交feign代理配置

--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,12 @@
             <version>3.5.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
+            <version>10.10.1</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
