--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,20 @@
             <version>10.10.1</version>
         </dependency>
 
+        <!--xml报文解析-->
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>jaxen</groupId>
+            <artifactId>jaxen</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <dependencyManagement>
