--- a/pom.xml
+++ b/pom.xml
@@ -262,7 +262,10 @@
             <artifactId>jaxen</artifactId>
             <version>1.2.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+        </dependency>
 
 
     </dependencies>
