--- a/pom.xml
+++ b/pom.xml
@@ -297,6 +297,11 @@
             <artifactId>seata-all</artifactId>
             <version>1.4.2</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.7.0</version>
+        </dependency>
 
 
     </dependencies>
