--- a/pom.xml
+++ b/pom.xml
@@ -302,6 +302,16 @@
             <artifactId>jedis</artifactId>
             <version>3.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.cronutils</groupId>
+            <artifactId>cron-utils</artifactId>
+            <version>9.2.0</version>
+        </dependency>
 
 
     </dependencies>
