--- a/pom.xml
+++ b/pom.xml
@@ -312,6 +312,11 @@
             <artifactId>cron-utils</artifactId>
             <version>9.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+            <version>4.6.0</version>
+        </dependency>
 
 
     </dependencies>
