--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,19 @@ server:
 #      mime-types: application/json
 spring:
   redis:
-    host: 192.168.100.100
+    host: 101.132.133.39
     port: 6379
     password: 123456
     timeout: 5000
+  # 消息队列配置
+  rocketmq:
+    operationMode: NATIVE
+    address: 101.132.133.39:9876
+    producerList:
+      - P_TEST_PRODUCER
+    topicList:
+      - LOG_TOPIC
+      - ORDER_TOPIC
   # jackson时间格式化
   jackson:
     time-zone: GMT+8
@@ -24,18 +33,18 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.p6spy.engine.spy.P6SpyDriver
-    url: jdbc:p6spy:mysql://192.168.80.169:3306/ofm_idc_cloud_lcp?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:p6spy:mysql://101.132.133.39:3306/test-xl?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: ewUw6b@s$Ustc3306
+    password: 123456
 
 # 下面这些内容是为了让MyBatis映射
 mybatis:
   # 指定Mybatis的Mapper文件
-  mapper-locations: classpath:mappers/*xml
+  mapper-locations: classpath*:mapper/**/*.xml
   # 指定Mybatis的实体目录
   type-aliases-package: com.hao.entity
 
-# 执行数据库sql打印 下面1、2、3 使用任意一个
+# 执行数据库sql打印 下面1、2使用任意一个
 logging:
   level:
     # 1
@@ -46,10 +55,8 @@ logging:
     springfox.documentation.spring.web.readers.operation.CachingOperationNameGenerator: warn
 #mybatis-plus:
 #  configuration:
-#    # 2
+#    # 2 在控制台打印
 #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-#    # 3
-#    log-impl: org.apache.ibatis.logging.logging.Slf4jImpl
 
 elasticsearch:
   nodes: 192.168.52.111:9200
@@ -59,3 +66,8 @@ elasticsearch:
 test:
   a: 1
   b: 2
+rocketmq:
+  name-server: 101.132.133.39:9876
+  pTestProducer: P_TEST_PRODUCER
+  logTopic: LOG_TOPIC
+  orderTopic: ORDER_TOPIC
