--- a/src/main/resources/spy.properties
+++ b/src/main/resources/spy.properties
@@ -1,30 +1,31 @@
-## 全部注释了
+# 配置参考：https://p6spy.readthedocs.io/en/latest/configandusage.html#properties-exposal-via-jmx
+modulelist=com.baomidou.mybatisplus.extension.p6spy.MybatisPlusLogFactory,com.p6spy.engine.outage.P6OutageFactory
+# 自定义日志打印
+logMessageFormat=com.hao.config.p6spy.P6SpyLogger
+# 日志输出到控制台
+appender=com.baomidou.mybatisplus.extension.p6spy.StdoutLogger
+## logMessageFormat默认com.baomidou.mybatisplus.extension.p6spy.P6SpyLogger显示如下
+## Consume Time：3 ms 2024-08-17 16:33:04
+## Execute SQL：select * from user where user.id = '2'
+## 自定义logMessageFormat后显示如下
+## 耗时：4 ms 2024-08-17 16:34:52
+## SQL：select * from user where user.id = '2'
 
 
-#modulelist=com.baomidou.mybatisplus.extension.p6spy.MybatisPlusLogFactory,com.p6spy.engine.outage.P6OutageFactory
-## 自定义日志打印
-#logMessageFormat=com.baomidou.mybatisplus.extension.p6spy.P6SpyLogger
-##日志输出到控制台
-#appender=com.baomidou.mybatisplus.extension.p6spy.StdoutLogger
-### 上面一起则显示如下
-###  Consume Time：2 ms 1687746761599
-### Execute SQL：SELECT id,USERID,username,orgid,orgname,del_flag FROM camel_case_test WHERE id='1' AND del_flag=0
-#
-#
-## 使用日志系统记录 sql 例：2023-06-26 10:28:48.288  INFO 13893 --- [nio-8080-exec-1] p6spy 60 : 1687746528287|1|statement|connection 0|url jdbc:p6spy:mysql://localhost:3306/test-xl?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai|SELECT id,USERID,username,orgid,orgname,del_flag FROM camel_case_test WHERE id=?  AND del_flag=0|SELECT id,USERID,username,orgid,orgname,del_flag FROM camel_case_test WHERE id='1'  AND del_flag=0
-##appender=com.p6spy.engine.spy.appender.Slf4JLogger
-## 设置 p6spy driver 代理
-#deregisterdrivers=true
-#
-### 取消JDBC URL前缀
-###useprefix=true
-### 配置记录 Log 例外,可去掉的结果集有error,info,batch,debug,statement,commit,rollback,result,resultset.
-##excludecategories=info,debug,result,commit,resultset
-### 日期格式
-##dateformat=yyyy-MM-dd HH:mm:ss
-### 实际驱动可多个
-###driverlist=org.h2.Driver
-### 是否开启慢SQL记录
-##outagedetection=true
-### 慢SQL记录标准 2 秒
-##outagedetectioninterval=2
+# 使用日志系统记录 sql 例：2023-06-26 10:28:48.288  INFO 13893 --- [nio-8080-exec-1] p6spy 60 : 1687746528287|1|statement|connection 0|url jdbc:p6spy:mysql://localhost:3306/test-xl?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai|SELECT id,USERID,username,orgid,orgname,del_flag FROM camel_case_test WHERE id=?  AND del_flag=0|SELECT id,USERID,username,orgid,orgname,del_flag FROM camel_case_test WHERE id='1'  AND del_flag=0
+#appender=com.p6spy.engine.spy.appender.Slf4JLogger
+# 设置 p6spy driver 代理
+deregisterdrivers=true
+
+# 取消JDBC URL前缀
+useprefix=true
+# 配置记录 Log 例外,可去掉的结果集有error,info,batch,debug,statement,commit,rollback,result,resultset.
+excludecategories=info,debug,result,commit,resultset
+# 日期格式
+dateformat=yyyy-MM-dd HH:mm:ss
+# 实际驱动可多个
+#driverlist=org.h2.Driver
+# 是否开启慢SQL记录
+outagedetection=false
+# 慢SQL记录标准 2 秒
+outagedetectioninterval=2
