--- a/pom.xml
+++ b/pom.xml
@@ -473,6 +473,11 @@
             <version>2.4.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>3.0.3</version>
+        </dependency>
 
     </dependencies>
 
