--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -71,3 +71,8 @@ rocketmq:
   pTestProducer: P_TEST_PRODUCER
   logTopic: LOG_TOPIC
   orderTopic: ORDER_TOPIC
+
+jasypt:
+  encryptor:
+    # 真实密码：123
+    password: f9S88g6jM3nT4m8pX7iDdg==
